# crazyswarm2

crazyflie/: CMakeLists.txt
crazyflie/config/: config.rviz  crazyflies.yaml  motion_capture.yaml
crazyflie/launch/: launch.py
crazyflie/results/: compare_feedforward_action.py  plot_coverage_positions.py  plot_metrics.py
crazyflie/results/2024_4_26_15h30m3s/: amorti.txt
crazyflie/results/2024_4_26_15h33m45s/: amorti.txt
crazyflie/results/2024_4_26_15h49m1s/: amorti.txt
crazyflie/results/2024_4_26_16h13m23s/: amorti.txt
crazyflie/results/2024_4_26_16h14m12s/: amorti.txt
crazyflie/results/2024_4_26_16h1m19s/: amorti.txt
crazyflie/results/2024_4_27_14h30m2s/: amorti.txt
crazyflie/results/2024_4_27_14h32m14s/: amorti.txt
crazyflie/results/2024_4_27_14h40m26s/: amorti.txt
crazyflie/results/2024_4_27_14h43m51s/: amorti.txt
crazyflie/results/2024_4_27_14h48m43s/: amorti.txt
crazyflie/results/2024_4_27_14h56m5s/: amorti.txt
crazyflie/results/2024_4_27_15h10m56s/: amorti.txt
crazyflie/results/2024_4_27_15h17m52s/: acc_system_identification.py  amorti.txt
crazyflie/scripts/: Algorithm.py  Algorithm_real.py  Polygon_publisher.py  Target_executor.py  alternative_algorithms.py  amorti.txt  function.txt  logging_for_sim.py  non_amorti.txt  plot_metrics.py  proper_classes4.py  read_positions_from_vrpn.py  voronoi_algorithm.py
crazyflie_examples/: setup.cfg
crazyflie_examples/crazyflie_examples/: executor.py  hello_world.py  land.py  take_off.py
crazyflie_interfaces/: CMakeLists.txt
crazyflie_interfaces/msg/: FullStateArray.msg
(+219 files in other folders)
